<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/background"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"
            android:onClick="Sincronizar"
            android:id="@+id/imagemSis" />


        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imagemSis"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="Relatorio"
            android:text="@string/btn_filters"
            android:id="@+id/btn_filters"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_filters"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_network"
            android:id="@+id/btn_network"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_network"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_logs"
            android:id="@+id/btn_logs"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_logs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_perfil"
            android:onClick="Perfil"
            android:id="@+id/btn_perfil"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_logout"
            android:onClick="Logout"
            android:id="@+id/btn_logout"/>


    </RelativeLayout>


</ScrollView>