<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tf_login"
                android:padding="10dp"
                android:textSize="20dp"
                android:id="@+id/login"
                android:layout_marginTop="50dp"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:drawableTint="#FFF"/>

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tf_password"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:id="@+id/senha"
                android:padding="10dp"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:drawableTint="#FFF"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:textSize="20dp"
                android:id="@+id/btn_login"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_login" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:id="@+id/btn_cadastro"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_signup"/>

        </LinearLayout>

    </RelativeLayout>


</ScrollView>