<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/background"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imagemSis" />

        <EditText
            android:layout_marginTop="40dp"
            android:id="@+id/login"
            android:layout_width="350dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imagemSis"
            android:hint="@string/tf_login"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textColorHint="@color/colorPrimaryDark"
            android:drawableTint="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="350dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:id="@+id/senha"
            android:hint="@string/tf_password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_below="@+id/login"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textColorHint="@color/colorPrimaryDark"
            android:drawableTint="@color/colorPrimaryDark"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="350dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/tf_webService"
            android:id="@+id/webservice"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_below="@+id/senha"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textColorHint="@color/colorPrimaryDark"
            android:drawableTint="@color/colorPrimaryDark"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/webservice"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:onClick="Conectar"
            android:text="@string/btn_perfil_signUp"
            android:textColor="#FFF"
            android:textSize="20dp" />
    </RelativeLayout>
</ScrollView>